# rmf-simulator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alertmanager/: alertmanager.yml
docs/: api.md  architecture.md  configuration.md  deployment.md  simulation.md
k8s/: configmaps.yaml
metrices/: definitions.py  simulator.py  updater.py
metrices/simulators/: base.py  clpr_simulator.py  cpu_simulator.py  factory.py  memory_simulator.py  mpb_simulator.py  network_simulator.py  storage_simulator.py  volumes_simulator.py
minio-policies/: nginx-minio.conf  policies.json
models/: lpar.py
mongo-init/: 01-init-db.js
mysql/conf.d/: mysql.cnf
mysql/init/: 01-init.sql
routes/: health.py  metrics.py  storage.py  system.py
storage/: db.py  metrics_dao.py  query_dao.py  schema.py  service.py  storage_manager.py
storage/S3/: s3.py  utils.py
storage/mongodb/: backup.py  config.py  connection.py  mongo.py  operations.py  queries.py  schema.py  service.py
storage/mysql/: config.py  connection.py  initializer.py  maintenance_dao.py
test1/: Dockerfile  README.md  app.py  docker-compose.yaml
test1/examples/: metrics.example.json  volumes.example.json
test1/modules/: clpr.py  cpu.py  io_subsystem.py  ldev.py  memory.py  mpb.py  ports.py  volumes.py
test2/: pyproject.toml
test2/k8s/: deployment.yaml  namespace.yaml
test2/models/: enum.py
test2/prometheus/: prometheus.yml
test2/utils/: confiig.py  logger.py  updater.py
(+3 files in other folders)
